webhosting-operator/config/monitoring/default/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert.gardener.cloud/issuer: letsencrypt
    cert.gardener.cloud/purpose: managed
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.webhosting.timebertt.dev
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.webhosting.timebertt.dev
    secretName: grafana-tls
